--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,9 +1,11 @@
 .navbar {
-  background: #1f2937;
+  background: #92acd1;
   color: white;
   padding: 1rem;
   position: sticky;
   top: 0;
+  margin-bottom: 400px;
+border-radius: 30px;
 }
 
 .navbar ul {
@@ -11,6 +13,7 @@
   display: flex;
   gap: 2rem;
   justify-content: center;
+  font-size:30px;
 }
 
 .navbar li {
